--- a/lang/French.lang
+++ b/lang/French.lang
@@ -1853,3 +1853,67 @@ CS_EXPLIST_HEADER
 	Liste des nick perimes dans la liste %s de %s
 CS_SENDCODE_SYNTAX_ERROR
 	Syntax: SENDCODE #channel
+REPLY_TYPE_NICK		
+	Missing: REPLY_TYPE_NICK
+REPLY_TYPE_QUIT		
+	I saw %s quit %s ago stating: %s
+REPLY_TYPE_NCTO_OPER
+	Missing: REPLY_TYPE_NCTO_OPER
+REPLY_TYPE_NCTO
+	Missing: REPLY_TYPE_NCTO
+REPLY_TYPE_NCFR_OPER
+	Missing: REPLY_TYPE_NCFR_OPER
+REPLY_TYPE_NCFR
+	Missing: REPLY_TYPE_NCFR
+REPLY_TYPE_KILL
+	Missing: REPLY_TYPE_KILL
+REPLY_TYPE_REASON
+	Reason: %s
+REPLY_TYPE_SPLIT
+	Missing: REPLY_TYPE_SPLIT
+REPLY_TYPE_KLINE
+	Missing: REPLY_TYPE_KLINE
+REPLY_TYPE_AKILL
+	Missing: REPLY_TYPE_AKILL
+REPLY_TYPE_NOSEEN
+	Missing: REPLY_TYPE_NOSEEN
+SS_SEENNICK_SYNTAX_ERROR
+	Missing: SS_SEENNICK_SYNTAX_ERROR
+REPLY_NICK_IS_ONLINE
+	Missing: REPLY_NICK_IS_ONLINE
+REPLY_NO_SEEN
+	Missing: REPLY_NO_SEEN
+SS_SEENNICK_HEADER
+	Seen info for %s:
+SS_SEENNICK_REPLY_REALNAME
+	Last seen Real Name: %s
+SS_SEENNICK_REPLY_ADDRESS
+	Last seen address: %s@%s
+SS_SEENNICK_REPLY_ADDRESS_OPER
+	Last seen address: %s@%s [%s]
+SS_SEENNICK_REPLY_IDENTIFIED_ONLINE
+	User is identified to that nick
+SS_SEENNICK_REPLY_IDENTIFIED_OFFLINE
+	Missing: SS_SEENNICK_REPLY_IDENTIFIED_OFFLINE
+SS_SEENNICK_REPLY_NOTID_ONLINE
+	Missing: SS_SEENNICK_REPLY_NOTID_ONLINE
+SS_SEENNICK_REPLY_NOTID_OFFLINE
+	User did not have access to that nick, or that nick is not registered
+END_OF_SEEN
+	*** End of Seen ***
+SS_SEENNICK_REPLY_USERMODE
+	Last usermode: %s
+SS_SEEN_SYNTAX_ERROR_OPER
+	Missing: SS_SEEN_SYNTAX_ERROR_OPER
+SS_SEEN_REPLY_MAXSEEN
+	Missing: SS_SEEN_REPLY_MAXSEEN
+SS_SEEN_REPLY_NOMATCH
+	No matches to your query were found.
+SS_SEEN_REPLY_MANY
+	Missing: SS_SEEN_REPLY_MANY
+SS_SEEN_REPLY_ONE
+	Missing: SS_SEEN_REPLY_ONE
+SS_SEEN_REPLY_SOME
+	Missing: SS_SEEN_REPLY_SOME
+SS_SEEN_SYNTAX_ERROR
+	Missing: SS_SEEN_SYNTAX_ERROR
