--- a/lang/English.lang
+++ b/lang/English.lang
@@ -325,7 +325,7 @@ CS_LEVEL_SOPONLY_KICK_REASON
 CS_LEVEL_SRAONLY_KICK_REASON
 	Only Services Roots are allowed to use this channel.
 CS_LEVEL_SYNTAX_ERROR
-	Syntax: LEVEL #channel [OPERS|SOP|SA|SRA|MASTERS|NONE]
+	Syntax: LEVEL #channel [SOP|SA|SRA|CODER|NONE]
 CS_LISTREG_SYNTAX_ERROR
 	Syntax: LISTREG N|D|T|U|NU|R|DR|H|K|F|Z|C pattern [page_number]
 CS_MKICK_SYNTAX_ERROR
