--- a/lang/Italian.lang
+++ b/lang/Italian.lang
@@ -326,7 +326,7 @@ CS_LEVEL_SOPONLY_KICK_REASON
 CS_LEVEL_SRAONLY_KICK_REASON
 	Solo i Services Roots possono entrare in questo canale.
 CS_LEVEL_SYNTAX_ERROR
-	Syntax: LEVEL #channel [OPERS|SOP|SA|SRA|CODERS|MASTERS|NONE]
+	Syntax: LEVEL #channel [SOP|SA|SRA|CODER|NONE]
 CS_LISTREG_SYNTAX_ERROR
 	Syntax: LISTREG N|D|T|U|NU|R|DR|H|K|F|Z|C pattern [page_number]
 CS_MKICK_SYNTAX_ERROR
@@ -1345,9 +1345,9 @@ NS_ERROR_MUST_IDENTIFY
 NS_ERROR_NICK_ALREADY_AUTH
 	ERRORE: La registrazione del tuo nick e' gia' stata confermata.
 NS_ERROR_NICK_FORBIDDEN
-	Il nick %s e' vietato e non può essere usato ne' registrato.
+	Il nick %s e' vietato e non puo' essere usato ne' registrato.
 NS_ERROR_NICK_FROZEN
-	Il nick %s e' bloccato e non può essere usato.
+	Il nick %s e' bloccato e non puo' essere usato.
 NS_ERROR_NICK_NOT_IN_USE
 	Nessuno sta usando il nick %s in questo momento.
 NS_FLAG_ERROR_NICK_ALREADY_FLAGGED
