--- a/run/data/helpfiles/it/news/news
+++ b/run/data/helpfiles/it/news/news
@@ -5,13 +5,13 @@ L'estate Azzurra si apre con alcune importanti novita'. Eccole:
 Lista canali via web
 E' ora possibile pubblicare il proprio canale sul sito di Azzurra!
 Per maggiori informazioni su questa iniziativa e sui passi da seguire
-consultate la guida all'indirizzo http://www.azzurra.org/chanlisthelp.php
+consultate la guida all'indirizzo http://www.azzurra.chat/chanlisthelp.php
  
 Nuovo sistema antispam
 Da qualche giorno e' attivo un sistema antispam in tutti i canali di
 Azzurra in cui e' presente uno dei nostri bot ufficiali. Per maggiori
 informazioni sul suo funzionamento vi rimandiamo al nostro forum,
-all'indirizzo http://www.azzurra.org/forum/viewtopic.php?t=6658
+all'indirizzo http://www.azzurra.chat/forum/viewtopic.php?t=6658
  
 Nuova gestione client FastWeb
 Da qualche tempo e' attivo un redirect a livello di DNS per i client FastWeb.
@@ -20,10 +20,10 @@ dedicati, eliminando finalmente ogni tipo di problema di connessione.
  
 Nuovo Game Server
 Vi piace giocare in rete? Venite a fare un salto sul server dedicato ad
-Unreal Tournament 2004 di Azzurra! L'indirizzo e' ut2004.azzurra.org,
+Unreal Tournament 2004 di Azzurra! L'indirizzo e' ut2004.azzurra.chat,
 la porta e' la 7777 e la password e' azzurra. Per maggiori
 informazioni su questa iniziativa potete consultare il nostro forum
-all'indirizzo http://www.azzurra.org/forum/viewtopic.php?t=6603
+all'indirizzo http://www.azzurra.chat/forum/viewtopic.php?t=6603
 oppure venirci a trovare direttamente nel canale #AzzurraGamers.
  
 Cogliamo l'occasione per augurarvi delle buone vacanze, e tenetevi pronti,
