--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Azzurra IRC Services
 ----------------------------------------
 
-Azzurra IRC Services is (c) 2001-2005 Azzurra IRC Network (irc@azzurra.org)
+Azzurra IRC Services is (c) 2001-2005 Azzurra IRC Network (irc@azzurra.chat)
 
 Original coding by Shaka (shaka@azzurra.org) and Gastaman (gastaman@azzurra.org)
 
@@ -14,4 +14,4 @@ Some portions of the code are based on the following projects:
 This program is free but copyrighted software; see the file COPYING for details.
 
 Latest information about Azzurra IRC Services can be found on the Azzurra
-IRC Network website, at http://devel.azzurra.org
+IRC Network website, at http://www.azzurra.chat
