--- a/lang/Italian.lang
+++ b/lang/Italian.lang
@@ -1,7 +1,7 @@
 BOTTLER_AKILL_REASON
 	L'uso del software Bottler non e' ammesso su questa rete. Usa un client VERO se vuoi chattare su Azzurra.
 CLONES_AKILL_REASON
-	Troppi cloni da questo host. Questa AutoKill e' temporanea e verra' automaticamente rimossa fra %d minuti. Visita http://kline.azzurra.org/ per maggiori informazioni.
+	Troppi cloni da questo host. Questa AutoKill e' temporanea e verra' automaticamente rimossa fra %d minuti. Visita http://www.azzurra.chat/ per maggiori informazioni.
 CSNS_EMAIL_TEXT_ABUSE
 	Se questo messaggio ti e' stato inviato erroneamente ti preghiamo di ignorarlo e segnalare l'accaduto ad %s
 	%s IRC Network
@@ -932,7 +932,7 @@ GET_SERVICE_COMMAND_LIST
 GET_SERVICE_COMMAND_LIST_MSG
 	Digita /msg %s HELP per la lista dei comandi disponibili.
 IDENT_AKILL_REASON
-	A causa di ripetuto spam da parte di alcuni utenti di questo Internet Service Provider, tutti i suoi utenti devono abilitare l'ident. Visita http://kline.azzurra.org/ per maggiori informazioni.
+	A causa di ripetuto spam da parte di alcuni utenti di questo Internet Service Provider, tutti i suoi utenti devono abilitare l'ident. Visita http://www.azzurra.chat/ per maggiori informazioni.
 INFO_CURRENT_TIME
 	Ora corrente: %s
 INVALID_PASSWORD_FIRST_WARNING
@@ -944,7 +944,7 @@ JOIN_CHAN_IS_REGISTERED
 LANG_LIST_HEADER
 	Linguaggi disponibili:
 MIRCWORM_AKILL_REASON
-	Hai un worm in mIRC che carica cloni e spamma altri utenti a tua insaputa. Cancella e reinstalla mIRC prima di ricollegarti ad Azzurra. Visita http://kline.azzurra.org/ per maggiori informazioni.
+	Hai un worm in mIRC che carica cloni e spamma altri utenti a tua insaputa. Cancella e reinstalla mIRC prima di ricollegarti ad Azzurra. Visita http://www.azzurra.chat/ per maggiori informazioni.
 MS_DEL_ALL_MEMOS_MARKED_DEL
 	Tutti i memo richiesti sono stati segnati come da cancellare.
 MS_DEL_ERROR_MEMO_ALREADY_DEL
@@ -1480,22 +1480,22 @@ NS_REGISTER_EMAIL_TEXT_1
 NS_REGISTER_EMAIL_TEXT_2
 	La registrazione del tuo nick sara' confermata e il tuo nick
 	sara' protetto da eventuali tentativi di abuso o furto.
-	Il sito ufficiale della rete e' http://www.azzurra.org/
+	Il sito ufficiale della rete e' http://www.azzurra.chat/
 	
 NS_REGISTER_EMAIL_TEXT_3
 	I regolamenti della rete e i documenti ufficiali sono
-	disponibili all'indirizzo http://www.azzurra.org/netfiles.php
+	disponibili all'indirizzo http://www.azzurra.chat/netfiles.php
 	
 NS_REGISTER_EMAIL_TEXT_4
 	Per ricevere assistenza sui servizi della rete o su IRC
 	in generale puoi rivolgerti sul canale ufficiale #IRCHelp
-	oppure online all'indirizzo http://help.azzurra.org/
+	oppure online all'indirizzo http://www.azzurra.chat/
 	Sono inoltre disponibili i seguenti servizi:
 	
 NS_REGISTER_EMAIL_TEXT_5
 	- %s IRC Network Forum
 	  Forum di discussione di %s, raggiungibile
-	  all'indirizzo http://www.azzurra.org/forum/
+	  all'indirizzo http://www.azzurra.chat/forum/
 	  Sul forum, oltre a poter esprimere la tua opinione,
 	  potrai informarti sulle novita' e sui nuovi servizi
 	  offerti dalla rete.
@@ -1504,12 +1504,12 @@ NS_REGISTER_EMAIL_TEXT_6
 	- %s Ticket Service
 	  Per richieste di supporto tecnico e' possibile
 	  utilizzare il servizio offerto da %s all'indirizzo
-	  http://ticket.azzurra.org usando il proprio nick
+	  http://www.azzurra.chat usando il proprio nick
 	  e la propria password per l'accesso.
 	
 NS_REGISTER_EMAIL_TEXT_7
 	Per una connessione piu' veloce e sicura e' vivamente
-	consigliato l'utilizzo del seguente server: irc.azzurra.org
+	consigliato l'utilizzo del seguente server: irc.azzurra.chat
 	%s IRC Network
 NS_REGISTER_ERROR_NICK_ALREADY_REG
 	Il nick %s e' gia' registrato!
@@ -1846,7 +1846,7 @@ TIME_REPLY_WEEK
 TIME_REPLY_WEEKS
 	%d settimane
 TROJAN_AKILL_REASON
-	Hai un trojan nel PC, vai su http://www.azzurra.org/forum/viewtopic.php?p=18543#18543 e leggi le istruzioni per rimuoverlo e poi ricollegati. Visita http://kline.azzurra.org/ per maggiori informazioni.
+	Hai un trojan nel PC, vai su http://www.azzurra.chat/forum/viewtopic.php?p=18543#18543 e leggi le istruzioni per rimuoverlo e poi ricollegati. Visita http://www.azzurra.chat/ per maggiori informazioni.
 WARNING_READONLY
 	Attenzione: I servizi sono momentaneamente in modalita' sola lettura. Le modifiche non verranno salvate!
 CS_EXPLIST_HEADER
