--- a/run/data/helpfiles/fr/news/news
+++ b/run/data/helpfiles/fr/news/news
@@ -5,18 +5,18 @@ Summer brings important enhancements to our network.
 Dynamic channel list on our website
 You can now publicize your channel on our website! For more
 information and a list of steps to follow please visit the help
-page available here: http://www.azzurra.org/chanlisthelp.php
+page available here: http://www.azzurra.chat/chanlisthelp.php
  
 New anti-spam system
 A new anti-spam system is being tested on our official botnet.
-Please visit http://www.azzurra.org/forum/viewtopic.php?t=6658
+Please visit http://www.azzurra.chat/forum/viewtopic.php?t=6658
 for more information on what it does and how to toggle it.
  
 New Game Server
 Are you a hardcore gamer? If you answered yes, we now have the
 place for you! We're pleased to announce our brand new Unreal
 Tournament 2004 private server, reachable at the address
-ut2004.azzurra.org on port 7777. The password is azzurra.
+ut2004.azzurra.chat on port 7777. The password is azzurra.
 You can also meet the other players in channel #AzzurraGamers.
  
 That's it for now. We'd like to use this space to wish all of you
